--- a/package.json
+++ b/package.json
@@ -26,22 +26,22 @@
 	},
 	"homepage": "https://github.com/polekstulod/foodtrip-api#readme",
 	"dependencies": {
-		"@sequelize/sqlite3": "7.0.0-alpha.45",
-		"axios": "^1.8.4",
-		"bcrypt": "^5.0.1",
+		"@sequelize/sqlite3": "7.0.0-alpha.46",
+		"axios": "^1.10.0",
+		"bcrypt": "^6.0.0",
 		"cors": "^2.8.5",
-		"dotenv": "^16.0.1",
-		"express": "^4.18.1",
-		"jsonwebtoken": "^9.0.0",
-		"multer": "^1.4.5-lts.1",
-		"mysql2": "^2.3.3",
-		"ollama": "^0.5.14",
-		"sequelize": "^6.29.0",
-		"sequelize-cli": "^6.4.1",
-		"sequelize-datatables": "^1.0.0",
-		"uuid": "^8.3.2"
+		"dotenv": "^17.2.0",
+		"express": "^5.1.0",
+		"jsonwebtoken": "^9.0.2",
+		"multer": "^2.0.1",
+		"mysql2": "^3.14.2",
+		"ollama": "^0.5.16",
+		"sequelize": "^6.37.7",
+		"sequelize-cli": "^6.6.3",
+		"sequelize-datatables": "^3.0.0",
+		"uuid": "^11.1.0"
 	},
 	"devDependencies": {
-		"nodemon": "^2.0.19"
+		"nodemon": "^3.1.10"
 	}
 }
