Enhance database configuration and setup documentation; add support for multiple databases and installation scripts

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,30 @@
-USE_DB= mysql
-PORT  = 3600
-NODE_ENV = development
-ALLOW_SYNC = false
-API_VERSION = "/api/v1"
-SALT_ROUND = 10
-TOKEN_SECRET = "cbc2bfe80a5296..."
+# Server Configuration
+PORT=5000
+API_VERSION=/api/v1
+TOKEN_SECRET=your-secret-key-here
+ALLOW_SYNC=true
+NODE_ENV=development
+SALT_ROUND=10
+
+# Database Configuration
+# Options: mysql, postgresql, sqlite, mariadb, mssql
+USE_DB=sqlite
+
+# MySQL/PostgreSQL/MariaDB/MSSQL Configuration
+DB_HOST=localhost
+DB_PORT=3306
+DB_USER=root
+DB_PASS=
+DB_NAME=foodtrip
+
+# SQLite Configuration
+DB_STORAGE=./db/database.sqlite
+
+# Additional Database Options
+DB_POOL_MAX=5
+DB_POOL_MIN=0
+DB_POOL_ACQUIRE=30000
+DB_POOL_IDLE=10000
+
+# Logging
+DB_LOGGING=false
