feat: Add database CLI tool and auto setup functionality
- Introduced a new CLI tool (`db-cli.js`) for managing database operations.
- Added commands for checking database status, running migrations, and seeding data.
- Implemented auto setup feature in `app.js` to create, migrate, and seed the database on startup.
- Updated environment variables in `.env.example` to support auto setup.
- Created comprehensive documentation for the database CLI and configuration.
- Modified ESLint configuration to comment out the space-before-function-paren rule.
- Added a new helper class (`databaseHelper.js`) for database operations and status checks.
- Updated `package.json` and `pnpm-lock.yaml` to include necessary dependencies for the CLI.

--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,7 @@ PORT=5000
 API_VERSION=/api/v1
 TOKEN_SECRET=your-secret-key-here
 ALLOW_SYNC=true
+AUTO_SETUP_DB=true
 NODE_ENV=development
 SALT_ROUND=10
 
