--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "uuid": "^11.1.0"
   },
   "devDependencies": {
+    "@faker-js/faker": "^9.9.0",
     "eslint": "8.57.0",
     "eslint-config-prettier": "^10.1.5",
     "eslint-config-standard": "^17.1.0",
